# monitor

./: Cargo.toml  README.md  flake.nix
src/: cli_args.rs  main.rs
src/output/: mod.rs  plot.rs  text.rs
src/prof/: mod.rs  perf.rs  proccpu.rs  procio.rs  procmaps.rs  procmem.rs  procnet.rs
