[package]
name = "monitor"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
nix = { version = "0.27.1", features = ["user", "fs"] }
plotters = "0.3.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
